[gd_scene load_steps=4 format=3 uid="uid://da7x63e8xjvux"]

[ext_resource type="Script" path="res://scripts/ui/auction_ui_controller.gd" id="1_auction"]
[ext_resource type="Script" path="res://scripts/ui/isometric_map_controller.gd" id="2_map_controller"]
[ext_resource type="PackedScene" uid="uid://cwj4n2w8yc3k5" path="res://scenes/auction/plot_tile.tscn" id="3_plot_tile"]

[node name="Auction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_auction")

[node name="MapViewport" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="MapViewport"]
handle_input_locally = true
size = Vector2i(1152, 648)
render_target_update_mode = 4
transparent_bg = false

[node name="IsometricMap" type="Node2D" parent="MapViewport/SubViewport"]
script = ExtResource("2_map_controller")
plot_tile_scene = ExtResource("3_plot_tile")

[node name="Background" type="ColorRect" parent="MapViewport/SubViewport/IsometricMap"]
z_index = -10
offset_left = -1000.0
offset_top = -1000.0
offset_right = 1000.0
offset_bottom = 1000.0
color = Color(0.239216, 0.156863, 0.0901961, 1)

[node name="Camera2D" type="Camera2D" parent="MapViewport/SubViewport/IsometricMap"]
enabled = true
position = Vector2(0, 0)
zoom = Vector2(1, 1)

[node name="PlotGrid" type="Node2D" parent="MapViewport/SubViewport/IsometricMap"]
z_index = 0

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10
follow_viewport_enabled = false

[node name="TopBar" type="HBoxContainer" parent="UILayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="UILayer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Land Auction - Round 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="UILayer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Budget: $1000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PlotInfoPanel" type="PanelContainer" parent="UILayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/PlotInfoPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlotNameLabel" type="Label" parent="UILayer/PlotInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Plot Name"
horizontal_alignment = 1

[node name="RichnessLabel" type="Label" parent="UILayer/PlotInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "★★★ Rich"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="UILayer/PlotInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Starting Bid: $200"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="UILayer/PlotInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Available"
horizontal_alignment = 1

[node name="BidButton" type="Button" parent="UILayer/PlotInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Place Bid"

[node name="InfoLabel" type="Label" parent="UILayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Select an available plot"
horizontal_alignment = 1
vertical_alignment = 1
